// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders block 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_regular_jprlrd-o_O-button_block_2ow2so"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders borderless 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_regular_jprlrd-o_O-button_inverted_1fj8x3s-o_O-button_borderless_1j06z2k"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders disabled 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_regular_jprlrd-o_O-button_disabled_5k6q5e"
  disabled={true}
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders inverted 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_regular_jprlrd-o_O-button_inverted_1fj8x3s"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders large 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_large_105ps8a"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders loading 1`] = `
<ButtonOrLink
  aria-busy={true}
  className="button_1lp5a5w-o_O-button_regular_jprlrd-o_O-button_disabled_5k6q5e-o_O-button_loading_1ety1lk"
  loading={true}
>
  <Loader
    inline={true}
    inverted={true}
  />
</ButtonOrLink>
`;

exports[`<Button /> renders small 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="button_1lp5a5w-o_O-button_small_1uh2yjw"
>
  Button
</ButtonOrLink>
`;
